<?xml version="1.0"?>
<package format="2">
  <name>obstacle_avoidance</name>
  <version>0.0.0</version>
  <description>A simple package to publish a series of random goals for turtlebot3 to follow</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="phil.jennings97@gmail.com">Philip Jennings</maintainer>
  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
